# eventlib

./: CMakeLists.txt  main.cpp
include/: data_processor.h  event_bus.h  events.h  logger.h  result_handler.h
src/: data_processor.cpp  event_bus.cpp  logger.cpp  result_handler.cpp
